# backend-fastapi-core-luizalabs

./: # ARQUITETURA DO PROJETO CBF MANAGER.md  .gitignore  README.md  add_club.py  analisar_colunas_espn.py  analise_colunas_espn.json  app.db  app.db.backup  debug_nova_url_simples.py  debug_scraper.py  debug_scraper_corrigido.py  debug_scraper_final.py  debug_scraper_fixed.py  elenco_vasco_espn_final.csv  elenco_vasco_espn_original.csv  goleiros_altura_peso.csv  goleiros_completo.csv  goleiros_fixo.csv  goleiros_teste_final.csv  goleiros_vasco_espn.csv  ienv.exemple  jogadores_campo_vasco_espn.csv  pyproject.toml  sql_app.db.backup  test_api_scraping.py  test_scraper.py  test_scraper_corrigido.py  test_simple_scraper.py
.marscode/: deviceInfo.json
alembic/: env.py
alembic/versions/: 04469e08b1f0_add_training_center_to_club_model.py  11b15db81b43_create_initial_tables.py  4c8251fcc2b2_update_player_column_names_to_snake_case.py  89e23ee372e3_initial_clean_database.py  92e046593961_separate_goalkeepers_and_field_players_.py  a067d48b9da1_add_jersey_number_to_player_model.py  ad30cefd782b_add_age_column_to_fieldplayer_and_.py  f9a9fa2cacde_update_player_stats_columns.py  fee5e428852d_remove_training_center_column_from_club.py
alembic/versions_backup/: 7f52b1239f3c_initial_database_setup_with_all_models_.py
app/: app.py  config.py  crud.py  database.py  models.py  models_updated.py  schemas.py  scraper.py  scraper_altura_peso.py  scraper_api.py  scraper_backup.py  scraper_completo.py  scraper_final.py  scraper_fixo.py  scraper_separacao.py  scraper_service.py  scraper_v2.py  security.py
docs/: MER_Diagram.md
tests/: .secretstest  test-api.http  test_adminteste.py  test_app.py
